# parametric_shapes

./: CMakeLists.txt  README.md  main.cpp
shape_lib/: CMakeLists.txt
shape_lib/include/: shape.cpp  shape.h
